--- a/web/admin/plato/Edit.xhtml
+++ b/web/admin/plato/Edit.xhtml
@@ -50,20 +50,24 @@
                         <h:panelGroup id="messagePanel" layout="block">
                             <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                         </h:panelGroup>
-                        <h:form>    
+                        <h:form id="formEditPlato">    
                             <h:panelGrid columns="2">
-                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaNombre}" for="plaNombre" />
+                                <h:outputLabel value="Nombre" for="plaNombre" />
                                 <h:inputText  class="form-control" id="plaNombre" value="#{platoController.selected.plaNombre}" title="#{bundle.EditPlatoTitle_plaNombre}" />
-                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaImagen}" for="plaImagen" />
+                                <h:outputLabel value="Imagen" for="plaImagen" />
                                 <h:inputText  class="form-control" id="plaImagen" value="#{platoController.selected.plaImagen}" title="#{bundle.EditPlatoTitle_plaImagen}" />
-                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaEstado}" for="plaEstado" />
-                                <h:inputText  class="form-control" id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.EditPlatoTitle_plaEstado}" />
-                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaId}" for="plaId" />
-                                <h:inputText  class="form-control" id="plaId" value="#{platoController.selected.plaId}" title="#{bundle.EditPlatoTitle_plaId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_plaId}"/>
-                                <h:outputLabel value="#{bundle.EditPlatoLabel_tblcategoriacatId}" for="tblcategoriacatId" />
-                                <h:selectOneMenu  class="form-control" id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.EditPlatoTitle_tblcategoriacatId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_tblcategoriacatId}">
-                                    <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"/>
+                                <h:outputLabel value="Estado" for="plaEstado" />
+                                
+                                <h:selectOneMenu  class="form-control" id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.CreatePlatoTitle_plaEstado}" >
+                                    <f:selectItems  value="#{platoController.estado}" var="categoria"/>
                                 </h:selectOneMenu>
+
+                                
+                                <h:outputLabel value="Categoría" for="tblcategoriacatId" />
+                                <h:selectOneMenu  class="form-control" id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.CreatePlatoTitle_tblcategoriacatId}" >
+                                    <f:selectItems  value="#{categoriaController.listCategorias}" var="categoria" itemLabel="#{categoria.catNombre}"/>
+                                </h:selectOneMenu>
+
                             </h:panelGrid>
                             <h:commandButton class="btn btn-primary" action="#{platoController.update}" value="#{bundle.EditPlatoSaveLink}"/>
 
