--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -3,47 +3,78 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditPlatoRestauranteTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_platIngredientes}" for="platIngredientes" />
-                    <h:inputText id="platIngredientes" value="#{platoRestauranteController.selected.platIngredientes}" title="#{bundle.EditPlatoRestauranteTitle_platIngredientes}" />
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_platDescripcion}" for="platDescripcion" />
-                    <h:inputText id="platDescripcion" value="#{platoRestauranteController.selected.platDescripcion}" title="#{bundle.EditPlatoRestauranteTitle_platDescripcion}" />
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_platPrecio}" for="platPrecio" />
-                    <h:inputText id="platPrecio" value="#{platoRestauranteController.selected.platPrecio}" title="#{bundle.EditPlatoRestauranteTitle_platPrecio}" />
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_platEstado}" for="platEstado" />
-                    <h:inputText id="platEstado" value="#{platoRestauranteController.selected.platEstado}" title="#{bundle.EditPlatoRestauranteTitle_platEstado}" />
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_platId}" for="platId" />
-                    <h:inputText id="platId" value="#{platoRestauranteController.selected.platId}" title="#{bundle.EditPlatoRestauranteTitle_platId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_platId}"/>
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_tblplatoplaId}" for="tblplatoplaId" />
-                    <h:selectOneMenu id="tblplatoplaId" value="#{platoRestauranteController.selected.tblplatoplaId}" title="#{bundle.EditPlatoRestauranteTitle_tblplatoplaId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblplatoplaId}">
-                        <f:selectItems value="#{platoController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.EditPlatoRestauranteLabel_tblRestauranteResId}" for="tblRestauranteResId" />
-                    <h:selectOneMenu id="tblRestauranteResId" value="#{platoRestauranteController.selected.tblRestauranteResId}" title="#{bundle.EditPlatoRestauranteTitle_tblRestauranteResId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblRestauranteResId}">
-                        <f:selectItems value="#{restauranteController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <h:commandLink action="#{platoRestauranteController.update}" value="#{bundle.EditPlatoRestauranteSaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditPlatoRestauranteViewLink}"/>
-                <br />
-                <h:commandLink action="#{platoRestauranteController.prepareList}" value="#{bundle.EditPlatoRestauranteShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditPlatoRestauranteIndexLink}" />
+    <ui:composition template="/plantillaMaestra.xhtml">
+
+        <ui:define name="top">
+
+            <h:form>      
+                <p:panelGrid class="tblCentfull">
+                    <p:row>
+                        <p:column>
+                            <a href="#" class="btn btn-info btn-lg">Editar Platillo</a>
+                        </p:column>
+                        <p:column>
+                            <a href="List.xhtml" class="btn btn-default btn-lg">Gestion de la carta</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../restaurante/EditarRestLogeado.xhtml.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../calificacion/List.xhtml" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
+                        </p:column>
+                        <p:column class="btn btn-success">
+                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+
             </h:form>
+        </ui:define>
+
+        <ui:define name="content">
+            <p:panelGrid class="tblCentfull">
+                <p:row>
+                    <p:column colspan="3">
+                        <h1 class="page-header alCen">Editar Platillo</h1>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column style="width: 500px">
+                    </p:column>
+                    <p:column>
+                        <h:panelGroup id="messagePanel" layout="block">
+                            <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                        </h:panelGroup>
+                        <h:form>
+                            <h:panelGrid columns="2">
+                                <h:outputLabel value="Plato" for="tblplatoplaId" />
+                                <h:selectOneMenu class="form-control" id="tblplatoplaId" value="#{platoRestauranteController.selected.tblplatoplaId}" title="#{bundle.EditPlatoRestauranteTitle_tblplatoplaId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblplatoplaId}">
+                                    <f:selectItems value="#{platoController.itemsAvailableSelectOne}"/>
+                                </h:selectOneMenu>
+                                <h:outputLabel value="Ingredientes" for="platIngredientes" />
+                                <h:inputText  class="form-control" id="platIngredientes" value="#{platoRestauranteController.selected.platIngredientes}" title="#{bundle.EditPlatoRestauranteTitle_platIngredientes}" />
+                                <h:outputLabel value="Descripción" for="platDescripcion" />
+                                <h:inputText  class="form-control" id="platDescripcion" value="#{platoRestauranteController.selected.platDescripcion}" title="#{bundle.EditPlatoRestauranteTitle_platDescripcion}" />
+                                <h:outputLabel value="Precio" for="platPrecio" />
+                                <h:inputText  class="form-control" id="platPrecio" value="#{platoRestauranteController.selected.platPrecio}" title="#{bundle.EditPlatoRestauranteTitle_platPrecio}" />
+                                <h:outputLabel value="Estado" for="platEstado" />
+                                <h:inputText id="platEstado" value="#{platoRestauranteController.selected.platEstado}" title="#{bundle.EditPlatoRestauranteTitle_platEstado}" />
+    <!--                            <h:outputLabel value="Restaurante" for="tblRestauranteResId" />
+                                <h:selectOneMenu class="form-control" id="tblRestauranteResId" value="#{platoRestauranteController.selected.tblRestauranteResId}" title="#{bundle.EditPlatoRestauranteTitle_tblRestauranteResId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblRestauranteResId}">
+                                    <f:selectItems value="#{restauranteController.itemsAvailableSelectOne}"/>
+                                </h:selectOneMenu>
+        -->                    </h:panelGrid>
+                            <h:commandButton class="btn btn-primary" action="#{platoRestauranteController.update}" value="#{bundle.EditPlatoRestauranteSaveLink}"/>
+
+                        </h:form>
+                    </p:column>
+                    <p:column style="width: 500px">
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
         </ui:define>
     </ui:composition>
 
