--- a/web/admin/plato/Create.xhtml
+++ b/web/admin/plato/Create.xhtml
@@ -62,7 +62,7 @@
                                 <h:outputLabel value="Estado" for="plaEstado" />
                                 
                                 <h:selectOneMenu  class="form-control" id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.CreatePlatoTitle_plaEstado}" >
-                                    <f:selectItems  value="#{platoController.estado}" var="categoria"/>
+                                    <f:selectItems  value="#{platoController.estado}"/>
                                 </h:selectOneMenu>
                                 
                                 <h:outputLabel value="Categoría" for="tblcategoriacatId" />
