--- a/web/admin/usuario/List.xhtml
+++ b/web/admin/usuario/List.xhtml
@@ -75,7 +75,7 @@
                                         <f:facet name="header">
                                             <h:outputText value="Tipo Usuario"/>
                                         </f:facet>
-                                        <h:outputText value="#{item.dueRol}"/>
+                                        <h:outputText value="#{usuarioController.getRolUsuario(item.dueUsuario)}"/>
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">
