--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -66,7 +66,9 @@
                                 <h:outputLabel value="Logo" for="resLogo" />
                                 <h:inputText  class="form-control" id="resLogo" value="#{restauranteController.selected.resLogo}" title="#{bundle.CreateRestauranteTitle_resLogo}" />
                                 <h:outputLabel value="Estado" for="resEstado" />
-                                <h:inputText class="form-control"  id="resEstado" value="#{restauranteController.selected.resEstado}" title="#{bundle.CreateRestauranteTitle_resEstado}" />
+                                <h:selectOneMenu     class="form-control"  id="resEstado" value="#{restauranteController.selected.resEstado}" title="#{bundle.CreateRestauranteTitle_resEstado}" >
+                                    <f:selectItems  value="#{restauranteController.estado}"/>
+                                </h:selectOneMenu>
                                 <h:outputLabel value="Latitud" for="resLatitud" />
                                 <h:inputText  class="form-control" id="resLatitud" value="#{restauranteController.selected.resLatitud}" title="#{bundle.CreateRestauranteTitle_resLatitud}" />
                                 <h:outputLabel value="Longitud" for="tesLongitud" />
