--- a/web/usuario/calificacion/List.xhtml
+++ b/web/usuario/calificacion/List.xhtml
@@ -3,65 +3,104 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListCalificacionTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:outputText escape="false" value="#{bundle.ListCalificacionEmpty}" rendered="#{calificacionController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{calificacionController.items.rowCount > 0}">
-                    <h:outputText value="#{calificacionController.pagination.pageFirstItem + 1}..#{calificacionController.pagination.pageLastItem + 1}/#{calificacionController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{calificacionController.previous}" value="#{bundle.Previous} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{calificacionController.next}" value="#{bundle.Next} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{calificacionController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCalificacionTitle_calId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.calId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCalificacionTitle_calPuntuacion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.calPuntuacion}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCalificacionTitle_calUsuario}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.calUsuario}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCalificacionTitle_tblplatorestauranteplatId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.tblplatorestauranteplatId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandLink action="#{calificacionController.prepareView}" value="#{bundle.ListCalificacionViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{calificacionController.prepareEdit}" value="#{bundle.ListCalificacionEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{calificacionController.destroy}" value="#{bundle.ListCalificacionDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGroup>
-                <br />
-                <h:commandLink action="#{calificacionController.prepareCreate}" value="#{bundle.ListCalificacionCreateLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ListCalificacionIndexLink}"/>
+    <ui:composition template="/plantillaMaestra.xhtml">
+
+        <ui:define name="top">
+
+            <h:form>      
+                <p:panelGrid class="tblCentfull">
+                    <p:row>
+                        <p:column>
+                            <a href="../platoRestaurante/Create.xhtml" class="btn btn-info btn-lg">Nuevo Platillo</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../platoRestaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de la carta</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
+                        </p:column>
+                        <p:column>
+                            <a href="#" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
+                        </p:column>
+                        <p:column class="btn btn-success">
+                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
             </h:form>
+        </ui:define>
+
+        <ui:define name="content">
+            <p:panelGrid class="tblCentfull">
+                <p:row>
+                    <p:column colspan="3">
+                        <h1 class="page-header alCen">Reporte de Calificaciones</h1>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column style="width: 500px">
+                    </p:column>
+                    <p:column>
+                        <h:form styleClass="jsfcrud_list_form">
+                            <h:panelGroup id="messagePanel" layout="block">
+                                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                            </h:panelGroup>
+                            <h:outputText escape="false" value="#{bundle.ListCalificacionEmpty}" rendered="#{calificacionController.items.rowCount == 0}"/>
+                            <h:panelGroup rendered="#{calificacionController.items.rowCount > 0}">
+                                <h:outputText value="#{calificacionController.pagination.pageFirstItem + 1}..#{calificacionController.pagination.pageLastItem + 1}/#{calificacionController.pagination.itemsCount}"/>&nbsp;
+                                <h:commandLink action="#{calificacionController.previous}" value="#{bundle.Previous} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasPreviousPage}"/>&nbsp;
+                                <h:commandLink action="#{calificacionController.next}" value="#{bundle.Next} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasNextPage}"/>&nbsp;
+                                <h:dataTable value="#{calificacionController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCalificacionTitle_calId}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.calId}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCalificacionTitle_calPuntuacion}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.calPuntuacion}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCalificacionTitle_calUsuario}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.calUsuario}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCalificacionTitle_tblplatorestauranteplatId}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.tblplatorestauranteplatId}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="&nbsp;"/>
+                                        </f:facet>
+                                        <h:commandLink action="#{calificacionController.prepareView}" value="#{bundle.ListCalificacionViewLink}"/>
+                                        <h:outputText value=" "/>
+                                        <h:commandLink action="#{calificacionController.prepareEdit}" value="#{bundle.ListCalificacionEditLink}"/>
+                                        <h:outputText value=" "/>
+                                        <h:commandLink action="#{calificacionController.destroy}" value="#{bundle.ListCalificacionDestroyLink}"/>
+                                    </h:column>
+                                </h:dataTable>
+                            </h:panelGroup>
+                            <br />
+                            <h:commandLink action="#{calificacionController.prepareCreate}" value="#{bundle.ListCalificacionCreateLink}"/>
+                            <br />
+                            <br />
+                            <h:link outcome="/index" value="#{bundle.ListCalificacionIndexLink}"/>
+                        </h:form>
+                    </p:column>
+                    <p:column style="width: 500px">
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
         </ui:define>
     </ui:composition>
 
