--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -48,7 +48,7 @@
                         <h:panelGroup id="messagePanel" layout="block">
                             <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                         </h:panelGroup>
-                        <h:form>
+                        <h:form id="formEditPlaRes">
                             <h:panelGrid columns="2">
                                 <h:outputLabel value="Plato" for="tblplatoplaId" />
                                 <h:selectOneMenu class="form-control" id="tblplatoplaId" value="#{platoRestauranteController.selected.tblplatoplaId}" title="#{bundle.EditPlatoRestauranteTitle_tblplatoplaId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblplatoplaId}">
@@ -61,7 +61,12 @@
                                 <h:outputLabel value="Precio" for="platPrecio" />
                                 <h:inputText  class="form-control" id="platPrecio" value="#{platoRestauranteController.selected.platPrecio}" title="#{bundle.EditPlatoRestauranteTitle_platPrecio}" />
                                 <h:outputLabel value="Estado" for="platEstado" />
-                                <h:inputText id="platEstado" value="#{platoRestauranteController.selected.platEstado}" title="#{bundle.EditPlatoRestauranteTitle_platEstado}" />
+                                
+                                <h:selectOneMenu  class="form-control" id="platEstado" value="#{platoRestauranteController.selected.platEstado}" title="#{bundle.EditPlatoRestauranteTitle_platEstado}" >
+                                    <f:selectItems  value="#{platoRestauranteController.estado}"/>
+                                </h:selectOneMenu>
+
+                                <h:inputText />
     <!--                            <h:outputLabel value="Restaurante" for="tblRestauranteResId" />
                                 <h:selectOneMenu class="form-control" id="tblRestauranteResId" value="#{platoRestauranteController.selected.tblRestauranteResId}" title="#{bundle.EditPlatoRestauranteTitle_tblRestauranteResId}" required="true" requiredMessage="#{bundle.EditPlatoRestauranteRequiredMessage_tblRestauranteResId}">
                                     <f:selectItems value="#{restauranteController.itemsAvailableSelectOne}"/>
