--- a/web/usuario/calificacion/List.xhtml
+++ b/web/usuario/calificacion/List.xhtml
@@ -14,7 +14,7 @@
                 <p:panelGrid class="tblCentfull">
                     <p:row>
                         <p:column>
-                            <a href="../platoRestaurante/Create.xhtml" class="btn btn-info btn-lg">Nuevo Platillo</a>
+                            <a href="../platoRestaurante/Create.xhtml" class="btn btn-default btn-lg">Nuevo Platillo</a>
                         </p:column>
                         <p:column>
                             <a href="../platoRestaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de la carta</a>
@@ -23,7 +23,7 @@
                             <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
                         </p:column>
                         <p:column>
-                            <a href="#" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
+                            <a href="#" class="btn btn-info btn-lg">Reporte de Calificaciones</a>
                         </p:column>
                         <p:column class="btn btn-success">
                             <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
