--- a/web/usuario/platoRestaurante/List.xhtml
+++ b/web/usuario/platoRestaurante/List.xhtml
@@ -14,10 +14,10 @@
                 <p:panelGrid class="tblCentfull">
                     <p:row>
                         <p:column>
-                            <a href="Create.xhtml" class="btn btn-info btn-lg">Nuevo Platillo</a>
+                            <a href="Create.xhtml" class="btn btn-default btn-lg">Nuevo Platillo</a>
                         </p:column>
                         <p:column>
-                            <a href="#" class="btn btn-default btn-lg">Gestion de la carta</a>
+                            <a href="#" class="btn btn-info btn-lg">Gestion de la carta</a>
                         </p:column>
                         <p:column>
                             <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-default btn-lg">Gestion del Restaurante</a>
