--- a/web/usuario/restaurante/EditarRestLogeado.xhtml
+++ b/web/usuario/restaurante/EditarRestLogeado.xhtml
@@ -14,13 +14,13 @@
                 <p:panelGrid class="tblCentfull">
                     <p:row>
                         <p:column>
-                            <a href="../platoRestaurante/Create.xhtml" class="btn btn-info btn-lg">Nuevo Platillo</a>
+                            <a href="../platoRestaurante/Create.xhtml" class="btn btn-default btn-lg">Nuevo Platillo</a>
                         </p:column>
                         <p:column>
                             <a href="../platoRestaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de la carta</a>
                         </p:column>
                         <p:column>
-                            <a href="#" class="btn btn-default btn-lg">Gestion del Restaurante</a>
+                            <a href="#" class="btn btn-info btn-lg">Gestion del Restaurante</a>
                         </p:column>
                         <p:column>
                             <a href="../calificacion/List.xhtml" class="btn btn-default btn-lg">Reporte de Calificaciones</a>
