base de datos en el servidor y correcciones

--- a/web/usuario/calificacion/List.xhtml
+++ b/web/usuario/calificacion/List.xhtml
@@ -53,24 +53,13 @@
                                 <h:outputText value="#{calificacionController.pagination.pageFirstItem + 1}..#{calificacionController.pagination.pageLastItem + 1}/#{calificacionController.pagination.itemsCount}"/>&nbsp;
                                 <h:commandLink action="#{calificacionController.previous}" value="#{bundle.Previous} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasPreviousPage}"/>&nbsp;
                                 <h:commandLink action="#{calificacionController.next}" value="#{bundle.Next} #{calificacionController.pagination.pageSize}" rendered="#{calificacionController.pagination.hasNextPage}"/>&nbsp;
-                                <h:dataTable value="#{calificacionController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                                <h:dataTable  class="tblCentfull" value="#{calificacionController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                                    
                                     <h:column>
                                         <f:facet name="header">
-                                            <h:outputText value="#{bundle.ListCalificacionTitle_calId}"/>
-                                        </f:facet>
-                                        <h:outputText value="#{item.calId}"/>
-                                    </h:column>
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="#{bundle.ListCalificacionTitle_calPuntuacion}"/>
+                                            <h:outputText value="Puntuación"/>
                                         </f:facet>
                                         <h:outputText value="#{item.calPuntuacion}"/>
-                                    </h:column>
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="#{bundle.ListCalificacionTitle_calUsuario}"/>
-                                        </f:facet>
-                                        <h:outputText value="#{item.calUsuario}"/>
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">
@@ -78,23 +67,9 @@
                                         </f:facet>
                                         <h:outputText value="#{item.tblplatorestauranteplatId}"/>
                                     </h:column>
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="&nbsp;"/>
-                                        </f:facet>
-                                        <h:commandLink action="#{calificacionController.prepareView}" value="#{bundle.ListCalificacionViewLink}"/>
-                                        <h:outputText value=" "/>
-                                        <h:commandLink action="#{calificacionController.prepareEdit}" value="#{bundle.ListCalificacionEditLink}"/>
-                                        <h:outputText value=" "/>
-                                        <h:commandLink action="#{calificacionController.destroy}" value="#{bundle.ListCalificacionDestroyLink}"/>
-                                    </h:column>
                                 </h:dataTable>
                             </h:panelGroup>
-                            <br />
-                            <h:commandLink action="#{calificacionController.prepareCreate}" value="#{bundle.ListCalificacionCreateLink}"/>
-                            <br />
-                            <br />
-                            <h:link outcome="/index" value="#{bundle.ListCalificacionIndexLink}"/>
+                            
                         </h:form>
                     </p:column>
                     <p:column style="width: 500px">
