--- a/web/admin/restaurante/Create.xhtml
+++ b/web/admin/restaurante/Create.xhtml
@@ -65,6 +65,9 @@
                                 <h:inputText  class="form-control" id="resTelefono" value="#{restauranteController.selected.resTelefono}" title="#{bundle.CreateRestauranteTitle_resTelefono}" />
                                 <h:outputLabel value="Logo" for="resLogo" />
                                 <h:inputText  class="form-control" id="resLogo" value="#{restauranteController.selected.resLogo}" title="#{bundle.CreateRestauranteTitle_resLogo}" />
+                                
+                                <h:commandButton value="subir" onclick="showMessage()"/>
+                                
                                 <h:outputLabel value="Estado" for="resEstado" />
                                 <h:selectOneMenu     class="form-control"  id="resEstado" value="#{restauranteController.selected.resEstado}" title="#{bundle.CreateRestauranteTitle_resEstado}" >
                                     <f:selectItems  value="#{restauranteController.estado}"/>
