se implemento la subida de imagenes y que apareciera en la carta, plato restaurante y restaurante el nombre en vez de id

--- a/web/admin/restaurante/List.xhtml
+++ b/web/admin/restaurante/List.xhtml
@@ -106,7 +106,7 @@
                                         <f:facet name="header">
                                             <h:outputText value="Dueño"/>
                                         </f:facet>
-                                        <h:outputText value="#{item.tblUsuarioDueId}"/>
+                                        <h:outputText value="#{restauranteController.obtenerNomDUeRes(item.tblUsuarioDueId)}"/>
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">
